# drf_project

./: .gitignore  pyproject.toml
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_image_comment.py  0003_article_like_alter_comment_article.py  0004_rename_like_article_likes.py  0005_alter_comment_article.py
drf_pj_poetry/: pyproject.toml
drf_project/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_date_of_birth.py  0003_user_followers.py  0004_remove_user_followers_user_followings.py
