[tool.poetry]
name = "drf-pj-poetry"
version = "0.1.0"
description = ""
authors = ["VinylStage <mcpe9869@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_pj_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
